compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> assignment
Rule 1     assignment -> VARIABLE SETTO expression
Rule 2     assignment -> VARIABLE SETTO flow
Rule 3     flow -> VARIABLE CONNECT flow_functions
Rule 4     flow_functions -> flow_function_call CONNECT flow_functions
Rule 5     flow_functions -> flow_function_call
Rule 6     flow_function_call -> VARIABLE LPAREN params RPAREN
Rule 7     assignment -> expression
Rule 8     expression -> expression PLUS term
Rule 9     expression -> expression MINUS term
Rule 10    expression -> term
Rule 11    expression -> string
Rule 12    string -> STRING
Rule 13    term -> term TIMES exponent
Rule 14    term -> term DIVIDE exponent
Rule 15    term -> exponent
Rule 16    exponent -> factor EXP factor
Rule 17    exponent -> factor
Rule 18    exponent -> LPAREN expression RPAREN
Rule 19    factor -> NUMBER
Rule 20    factor -> VARIABLE
Rule 21    expression -> expression GT expression
Rule 22    expression -> expression LT expression
Rule 23    expression -> expression GE expression
Rule 24    expression -> expression LE expression
Rule 25    expression -> expression EQ expression
Rule 26    expression -> expression NE expression
Rule 27    expression -> LPAREN expression RPAREN AND LPAREN expression RPAREN
Rule 28    expression -> LPAREN expression RPAREN OR LPAREN expression RPAREN
Rule 29    factor -> function_call
Rule 30    function_call -> VARIABLE LPAREN RPAREN
Rule 31    function_call -> VARIABLE LPAREN params RPAREN
Rule 32    params -> params COMMA expression
Rule 33    params -> expression
Rule 34    expression -> IF LPAREN expression RPAREN COLON expression ELSE COLON expression
Rule 35    expression -> LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN

Terminals, with rules where they appear

AND                  : 27
COLON                : 34 34 35
COMMA                : 32
CONNECT              : 3 4
DIVIDE               : 14
ELSE                 : 34
EQ                   : 25
EXP                  : 16
GE                   : 23
GT                   : 21
IF                   : 34
LE                   : 24
LPAREN               : 6 18 27 27 28 28 30 31 34 35 35 35
LT                   : 22
MINUS                : 9
NE                   : 26
NUMBER               : 19
OR                   : 28
PLUS                 : 8
RPAREN               : 6 18 27 27 28 28 30 31 34 35 35 35
SETTO                : 1 2
STRING               : 12
TERNARY              : 35
TIMES                : 13
VARIABLE             : 1 2 3 6 20 30 31
error                : 

Nonterminals, with rules where they appear

assignment           : 0
exponent             : 13 14 15
expression           : 1 7 8 9 18 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 32 33 34 34 34 35 35 35
factor               : 16 16 17
flow                 : 2
flow_function_call   : 4 5
flow_functions       : 3 4
function_call        : 29
params               : 6 31 32
string               : 11
term                 : 8 9 10 13 14

Parsing method: LALR

state 0

    (0) S' -> . assignment
    (1) assignment -> . VARIABLE SETTO expression
    (2) assignment -> . VARIABLE SETTO flow
    (7) assignment -> . expression
    (8) expression -> . expression PLUS term
    (9) expression -> . expression MINUS term
    (10) expression -> . term
    (11) expression -> . string
    (21) expression -> . expression GT expression
    (22) expression -> . expression LT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . LPAREN expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> . LPAREN expression RPAREN OR LPAREN expression RPAREN
    (34) expression -> . IF LPAREN expression RPAREN COLON expression ELSE COLON expression
    (35) expression -> . LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (12) string -> . STRING
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    VARIABLE        shift and go to state 2
    LPAREN          shift and go to state 6
    IF              shift and go to state 7
    STRING          shift and go to state 9
    NUMBER          shift and go to state 11

    assignment                     shift and go to state 1
    expression                     shift and go to state 3
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 1

    (0) S' -> assignment .



state 2

    (1) assignment -> VARIABLE . SETTO expression
    (2) assignment -> VARIABLE . SETTO flow
    (20) factor -> VARIABLE .
    (30) function_call -> VARIABLE . LPAREN RPAREN
    (31) function_call -> VARIABLE . LPAREN params RPAREN

    SETTO           shift and go to state 13
    EXP             reduce using rule 20 (factor -> VARIABLE .)
    TIMES           reduce using rule 20 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 20 (factor -> VARIABLE .)
    PLUS            reduce using rule 20 (factor -> VARIABLE .)
    MINUS           reduce using rule 20 (factor -> VARIABLE .)
    GT              reduce using rule 20 (factor -> VARIABLE .)
    LT              reduce using rule 20 (factor -> VARIABLE .)
    GE              reduce using rule 20 (factor -> VARIABLE .)
    LE              reduce using rule 20 (factor -> VARIABLE .)
    EQ              reduce using rule 20 (factor -> VARIABLE .)
    NE              reduce using rule 20 (factor -> VARIABLE .)
    $end            reduce using rule 20 (factor -> VARIABLE .)
    LPAREN          shift and go to state 14


state 3

    (7) assignment -> expression .
    (8) expression -> expression . PLUS term
    (9) expression -> expression . MINUS term
    (21) expression -> expression . GT expression
    (22) expression -> expression . LT expression
    (23) expression -> expression . GE expression
    (24) expression -> expression . LE expression
    (25) expression -> expression . EQ expression
    (26) expression -> expression . NE expression

    $end            reduce using rule 7 (assignment -> expression .)
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    GT              shift and go to state 17
    LT              shift and go to state 18
    GE              shift and go to state 19
    LE              shift and go to state 20
    EQ              shift and go to state 21
    NE              shift and go to state 22


state 4

    (10) expression -> term .
    (13) term -> term . TIMES exponent
    (14) term -> term . DIVIDE exponent

    PLUS            reduce using rule 10 (expression -> term .)
    MINUS           reduce using rule 10 (expression -> term .)
    GT              reduce using rule 10 (expression -> term .)
    LT              reduce using rule 10 (expression -> term .)
    GE              reduce using rule 10 (expression -> term .)
    LE              reduce using rule 10 (expression -> term .)
    EQ              reduce using rule 10 (expression -> term .)
    NE              reduce using rule 10 (expression -> term .)
    $end            reduce using rule 10 (expression -> term .)
    RPAREN          reduce using rule 10 (expression -> term .)
    COMMA           reduce using rule 10 (expression -> term .)
    ELSE            reduce using rule 10 (expression -> term .)
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 24


state 5

    (11) expression -> string .

    PLUS            reduce using rule 11 (expression -> string .)
    MINUS           reduce using rule 11 (expression -> string .)
    GT              reduce using rule 11 (expression -> string .)
    LT              reduce using rule 11 (expression -> string .)
    GE              reduce using rule 11 (expression -> string .)
    LE              reduce using rule 11 (expression -> string .)
    EQ              reduce using rule 11 (expression -> string .)
    NE              reduce using rule 11 (expression -> string .)
    $end            reduce using rule 11 (expression -> string .)
    RPAREN          reduce using rule 11 (expression -> string .)
    COMMA           reduce using rule 11 (expression -> string .)
    ELSE            reduce using rule 11 (expression -> string .)


state 6

    (27) expression -> LPAREN . expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> LPAREN . expression RPAREN OR LPAREN expression RPAREN
    (35) expression -> LPAREN . expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (18) exponent -> LPAREN . expression RPAREN
    (8) expression -> . expression PLUS term
    (9) expression -> . expression MINUS term
    (10) expression -> . term
    (11) expression -> . string
    (21) expression -> . expression GT expression
    (22) expression -> . expression LT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . LPAREN expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> . LPAREN expression RPAREN OR LPAREN expression RPAREN
    (34) expression -> . IF LPAREN expression RPAREN COLON expression ELSE COLON expression
    (35) expression -> . LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (12) string -> . STRING
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 6
    IF              shift and go to state 7
    STRING          shift and go to state 9
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    expression                     shift and go to state 25
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 7

    (34) expression -> IF . LPAREN expression RPAREN COLON expression ELSE COLON expression

    LPAREN          shift and go to state 27


state 8

    (15) term -> exponent .

    TIMES           reduce using rule 15 (term -> exponent .)
    DIVIDE          reduce using rule 15 (term -> exponent .)
    PLUS            reduce using rule 15 (term -> exponent .)
    MINUS           reduce using rule 15 (term -> exponent .)
    GT              reduce using rule 15 (term -> exponent .)
    LT              reduce using rule 15 (term -> exponent .)
    GE              reduce using rule 15 (term -> exponent .)
    LE              reduce using rule 15 (term -> exponent .)
    EQ              reduce using rule 15 (term -> exponent .)
    NE              reduce using rule 15 (term -> exponent .)
    $end            reduce using rule 15 (term -> exponent .)
    RPAREN          reduce using rule 15 (term -> exponent .)
    COMMA           reduce using rule 15 (term -> exponent .)
    ELSE            reduce using rule 15 (term -> exponent .)


state 9

    (12) string -> STRING .

    PLUS            reduce using rule 12 (string -> STRING .)
    MINUS           reduce using rule 12 (string -> STRING .)
    GT              reduce using rule 12 (string -> STRING .)
    LT              reduce using rule 12 (string -> STRING .)
    GE              reduce using rule 12 (string -> STRING .)
    LE              reduce using rule 12 (string -> STRING .)
    EQ              reduce using rule 12 (string -> STRING .)
    NE              reduce using rule 12 (string -> STRING .)
    $end            reduce using rule 12 (string -> STRING .)
    RPAREN          reduce using rule 12 (string -> STRING .)
    COMMA           reduce using rule 12 (string -> STRING .)
    ELSE            reduce using rule 12 (string -> STRING .)


state 10

    (16) exponent -> factor . EXP factor
    (17) exponent -> factor .

    EXP             shift and go to state 28
    TIMES           reduce using rule 17 (exponent -> factor .)
    DIVIDE          reduce using rule 17 (exponent -> factor .)
    PLUS            reduce using rule 17 (exponent -> factor .)
    MINUS           reduce using rule 17 (exponent -> factor .)
    GT              reduce using rule 17 (exponent -> factor .)
    LT              reduce using rule 17 (exponent -> factor .)
    GE              reduce using rule 17 (exponent -> factor .)
    LE              reduce using rule 17 (exponent -> factor .)
    EQ              reduce using rule 17 (exponent -> factor .)
    NE              reduce using rule 17 (exponent -> factor .)
    $end            reduce using rule 17 (exponent -> factor .)
    RPAREN          reduce using rule 17 (exponent -> factor .)
    COMMA           reduce using rule 17 (exponent -> factor .)
    ELSE            reduce using rule 17 (exponent -> factor .)


state 11

    (19) factor -> NUMBER .

    EXP             reduce using rule 19 (factor -> NUMBER .)
    TIMES           reduce using rule 19 (factor -> NUMBER .)
    DIVIDE          reduce using rule 19 (factor -> NUMBER .)
    PLUS            reduce using rule 19 (factor -> NUMBER .)
    MINUS           reduce using rule 19 (factor -> NUMBER .)
    GT              reduce using rule 19 (factor -> NUMBER .)
    LT              reduce using rule 19 (factor -> NUMBER .)
    GE              reduce using rule 19 (factor -> NUMBER .)
    LE              reduce using rule 19 (factor -> NUMBER .)
    EQ              reduce using rule 19 (factor -> NUMBER .)
    NE              reduce using rule 19 (factor -> NUMBER .)
    $end            reduce using rule 19 (factor -> NUMBER .)
    RPAREN          reduce using rule 19 (factor -> NUMBER .)
    COMMA           reduce using rule 19 (factor -> NUMBER .)
    ELSE            reduce using rule 19 (factor -> NUMBER .)


state 12

    (29) factor -> function_call .

    EXP             reduce using rule 29 (factor -> function_call .)
    TIMES           reduce using rule 29 (factor -> function_call .)
    DIVIDE          reduce using rule 29 (factor -> function_call .)
    PLUS            reduce using rule 29 (factor -> function_call .)
    MINUS           reduce using rule 29 (factor -> function_call .)
    GT              reduce using rule 29 (factor -> function_call .)
    LT              reduce using rule 29 (factor -> function_call .)
    GE              reduce using rule 29 (factor -> function_call .)
    LE              reduce using rule 29 (factor -> function_call .)
    EQ              reduce using rule 29 (factor -> function_call .)
    NE              reduce using rule 29 (factor -> function_call .)
    $end            reduce using rule 29 (factor -> function_call .)
    RPAREN          reduce using rule 29 (factor -> function_call .)
    COMMA           reduce using rule 29 (factor -> function_call .)
    ELSE            reduce using rule 29 (factor -> function_call .)


state 13

    (1) assignment -> VARIABLE SETTO . expression
    (2) assignment -> VARIABLE SETTO . flow
    (8) expression -> . expression PLUS term
    (9) expression -> . expression MINUS term
    (10) expression -> . term
    (11) expression -> . string
    (21) expression -> . expression GT expression
    (22) expression -> . expression LT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . LPAREN expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> . LPAREN expression RPAREN OR LPAREN expression RPAREN
    (34) expression -> . IF LPAREN expression RPAREN COLON expression ELSE COLON expression
    (35) expression -> . LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (3) flow -> . VARIABLE CONNECT flow_functions
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (12) string -> . STRING
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 6
    IF              shift and go to state 7
    VARIABLE        shift and go to state 29
    STRING          shift and go to state 9
    NUMBER          shift and go to state 11

    expression                     shift and go to state 30
    flow                           shift and go to state 31
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 14

    (30) function_call -> VARIABLE LPAREN . RPAREN
    (31) function_call -> VARIABLE LPAREN . params RPAREN
    (32) params -> . params COMMA expression
    (33) params -> . expression
    (8) expression -> . expression PLUS term
    (9) expression -> . expression MINUS term
    (10) expression -> . term
    (11) expression -> . string
    (21) expression -> . expression GT expression
    (22) expression -> . expression LT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . LPAREN expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> . LPAREN expression RPAREN OR LPAREN expression RPAREN
    (34) expression -> . IF LPAREN expression RPAREN COLON expression ELSE COLON expression
    (35) expression -> . LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (12) string -> . STRING
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    RPAREN          shift and go to state 32
    LPAREN          shift and go to state 6
    IF              shift and go to state 7
    STRING          shift and go to state 9
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    params                         shift and go to state 33
    expression                     shift and go to state 34
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 15

    (8) expression -> expression PLUS . term
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 36
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    term                           shift and go to state 35
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 16

    (9) expression -> expression MINUS . term
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 36
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    term                           shift and go to state 37
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 17

    (21) expression -> expression GT . expression
    (8) expression -> . expression PLUS term
    (9) expression -> . expression MINUS term
    (10) expression -> . term
    (11) expression -> . string
    (21) expression -> . expression GT expression
    (22) expression -> . expression LT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . LPAREN expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> . LPAREN expression RPAREN OR LPAREN expression RPAREN
    (34) expression -> . IF LPAREN expression RPAREN COLON expression ELSE COLON expression
    (35) expression -> . LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (12) string -> . STRING
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 6
    IF              shift and go to state 7
    STRING          shift and go to state 9
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    expression                     shift and go to state 38
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 18

    (22) expression -> expression LT . expression
    (8) expression -> . expression PLUS term
    (9) expression -> . expression MINUS term
    (10) expression -> . term
    (11) expression -> . string
    (21) expression -> . expression GT expression
    (22) expression -> . expression LT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . LPAREN expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> . LPAREN expression RPAREN OR LPAREN expression RPAREN
    (34) expression -> . IF LPAREN expression RPAREN COLON expression ELSE COLON expression
    (35) expression -> . LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (12) string -> . STRING
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 6
    IF              shift and go to state 7
    STRING          shift and go to state 9
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    expression                     shift and go to state 39
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 19

    (23) expression -> expression GE . expression
    (8) expression -> . expression PLUS term
    (9) expression -> . expression MINUS term
    (10) expression -> . term
    (11) expression -> . string
    (21) expression -> . expression GT expression
    (22) expression -> . expression LT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . LPAREN expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> . LPAREN expression RPAREN OR LPAREN expression RPAREN
    (34) expression -> . IF LPAREN expression RPAREN COLON expression ELSE COLON expression
    (35) expression -> . LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (12) string -> . STRING
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 6
    IF              shift and go to state 7
    STRING          shift and go to state 9
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    expression                     shift and go to state 40
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 20

    (24) expression -> expression LE . expression
    (8) expression -> . expression PLUS term
    (9) expression -> . expression MINUS term
    (10) expression -> . term
    (11) expression -> . string
    (21) expression -> . expression GT expression
    (22) expression -> . expression LT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . LPAREN expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> . LPAREN expression RPAREN OR LPAREN expression RPAREN
    (34) expression -> . IF LPAREN expression RPAREN COLON expression ELSE COLON expression
    (35) expression -> . LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (12) string -> . STRING
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 6
    IF              shift and go to state 7
    STRING          shift and go to state 9
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    expression                     shift and go to state 41
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 21

    (25) expression -> expression EQ . expression
    (8) expression -> . expression PLUS term
    (9) expression -> . expression MINUS term
    (10) expression -> . term
    (11) expression -> . string
    (21) expression -> . expression GT expression
    (22) expression -> . expression LT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . LPAREN expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> . LPAREN expression RPAREN OR LPAREN expression RPAREN
    (34) expression -> . IF LPAREN expression RPAREN COLON expression ELSE COLON expression
    (35) expression -> . LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (12) string -> . STRING
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 6
    IF              shift and go to state 7
    STRING          shift and go to state 9
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    expression                     shift and go to state 42
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 22

    (26) expression -> expression NE . expression
    (8) expression -> . expression PLUS term
    (9) expression -> . expression MINUS term
    (10) expression -> . term
    (11) expression -> . string
    (21) expression -> . expression GT expression
    (22) expression -> . expression LT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . LPAREN expression RPAREN AND LPAREN expression RPAREN
    (28) expression -> . LPAREN expression RPAREN OR LPAREN expression RPAREN
    (34) expression -> . IF LPAREN expression RPAREN COLON expression ELSE COLON expression
    (35) expression -> . LPAREN expression RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (13) term -> . term TIMES exponent
    (14) term -> . term DIVIDE exponent
    (15) term -> . exponent
    (12) string -> . STRING
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 6
    IF              shift and go to state 7
    STRING          shift and go to state 9
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    expression                     shift and go to state 43
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 8
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 23

    (13) term -> term TIMES . exponent
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 36
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    exponent                       shift and go to state 44
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 24

    (14) term -> term DIVIDE . exponent
    (16) exponent -> . factor EXP factor
    (17) exponent -> . factor
    (18) exponent -> . LPAREN expression RPAREN
    (19) factor -> . NUMBER
    (20) factor -> . VARIABLE
    (29) factor -> . function_call
    (30) function_call -> . VARIABLE LPAREN RPAREN
    (31) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 36
    NUMBER          shift and go to state 11
    VARIABLE        shift and go to state 26

    exponent                       shift and go to state 45
    factor                         shift and go to state 10
    function_call                  shift and go to state 12

state 25

    (27) expression -> LPAREN expression . RPAREN AND LPAREN expression RPAREN
    (28) expression -> LPAREN expression . RPAREN OR LPAREN expression RPAREN
    (35) expression -> LPAREN expression . RPAREN TERNARY LPAREN expression RPAREN COLON LPAREN expression RPAREN
    (18) exponent -> LPAREN expression . RPAREN
    (8) expression -> expression . PLUS term
    (9) expression -> expression . MINUS term
    (21) expression -> expression . GT expression
    (22) expression -> expression . LT expression
    (23) expression -> expression . GE expression
    (24) expression -> expression . LE expression
    (25) expression -> expression . EQ expression
    (26) expression -> expression . NE expression

    RPAREN          shift and go to state 46
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    GT              shift and go to state 17
    LT              shift and go to state 18
    GE              shift and go to state 19
    LE              shift and go to state 20
    EQ              shift and go to state 21
    NE              shift and go to state 22


state 26

    (20) factor -> VARIABLE .
    (30) function_call -> VARIABLE . LPAREN RPAREN
    (31) function_call -> VARIABLE . LPAREN params RPAREN

    EXP             reduce using rule 20 (factor -> VARIABLE .)
    TIMES           reduce using rule 20 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 20 (factor -> VARIABLE .)
    RPAREN          reduce using rule 20 (factor -> VARIABLE .)
    PLUS            reduce using rule 20 (factor -> VARIABLE .)
    MINUS           reduce using rule 20 (factor -> VARIABLE .)
    GT              reduce using rule 20 (factor -> VARIABLE .)
    LT              reduce using rule 20 (factor -> VARIABLE .)
    GE              reduce using rule 20 (factor -> VARIABLE .)
    LE              reduce using rule 20 (factor -> VARIABLE .)
    EQ              reduce using rule 20 (factor -> VARIABLE .)
    NE              reduce using rule 20 (factor -> VARIABLE .)
    COMMA           reduce using rule 20 (factor -> VARIABLE .)
    $end            reduce using rule 20 (factor -> VARIABLE .)
    ELSE            reduce using rule 20 (factor -> VARIABLE .)
    LPAREN          shift and go to state 14


state 27
